Added PAL dependency

--- a/ttools/.properties
+++ b/ttools/.properties
@@ -6,5 +6,6 @@ jar.class.path=\
  ../fits/fits.jar \
  ../mirage/mirage.jar \
  ../votable/votable.jar \
+ ../pal/pal.jar \
  ../axis/axis.jar \
  ../soapserver/soapserver.jar
