--- a/ttools/.properties
+++ b/ttools/.properties
@@ -2,6 +2,7 @@ jar.class.path=\
  jel_g.jar \
  ../util/util.jar \
  ../table/table.jar \
+ ../task/task.jar \
  ../tamfits/tamfits.jar \
  ../fits/fits.jar \
  ../mirage/mirage.jar \
