Modified the way that named arguments are specified - now it's "-param=value" not "param=value".

--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -1022,7 +1022,7 @@
           classpathref="classpath">
       <arg value="uk.ac.starlink.ttools.Stilts"/>
       <arg value="tcopy"/>
-      <arg value="help=in"/>
+      <arg value="-help=in"/>
     </java>
 
     <!-- Write XML files containing per-task usage information
