--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -1032,6 +1032,16 @@
           fork="yes"
           dir="${build.docs}"
           classpathref="classpath"/>
+    <java classname="uk.ac.starlink.ttools.build.FilterDoc"
+          failonerror="yes"
+          output="${build.docs}/filter-docs.xml"
+          logerror="yes"
+          classpathref="classpath"/>
+    <java classname="uk.ac.starlink.ttools.build.ModeDoc"
+          failonerror="yes"
+          output="${build.docs}/mode-docs.xml"
+          logerror="yes"
+          classpathref="classpath"/>
 
     <!-- Transform the user document XML to a single HTML document. -->
     <mkdir dir="${build.docs}/${user.doc}"/>
