--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -1190,7 +1190,7 @@
 
       <batchtest>
         <fileset dir="${tests.dir}">
-          <include name="**/*Test*"/>
+          <include name="**/*Test.java"/>
         </fileset>
       </batchtest>
 
