Added XML-RPC client (and probably server too, though I don't need them) classes.

--- a/astrogrid/.properties
+++ b/astrogrid/.properties
@@ -1,1 +1,3 @@
-jar.class.path=../aglib/aglib.jar ../table/table.jar ../connect/connect.jar
+jar.class.path=xmlrpc-2.0.jar commons-codec-1.3.jar \
+               ../aglib/aglib.jar ../table/table.jar ../connect/connect.jar
+               
