--- a/astrogrid/.properties
+++ b/astrogrid/.properties
@@ -1,3 +1,3 @@
 jar.class.path=xmlrpc-2.0.jar commons-codec-1.3.jar \
-               ../aglib/aglib.jar ../table/table.jar ../connect/connect.jar
+               ../table/table.jar ../connect/connect.jar
                
