--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -1024,7 +1024,7 @@
           classpathref="classpath">
       <arg value="uk.ac.starlink.ttools.Stilts"/>
       <arg value="tcopy"/>
-      <arg value="-help=in"/>
+      <arg value="help=in"/>
     </java>
 
     <!-- Write XML files containing per-task usage information
