--- a/ttools/build.xml
+++ b/ttools/build.xml
@@ -80,7 +80,7 @@
   <!-- Define the package name and current versions -->
   <property name="Name" value="TTOOLS"/>
   <property name="name" value="ttools"/>
-  <property name="version" value="1.0"/>
+  <property name="version" value="1.0b"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="uk.ac.starlink.ttools"/>
@@ -1034,7 +1034,7 @@
           classpathref="classpath">
       <arg value="uk.ac.starlink.ttools.Stilts"/>
       <arg value="tcopy"/>
-      <arg value="-help"/>
+      <arg value="help"/>
     </java>
     <!-- fork="yes" required below else ant confuses JAXP -->
     <java classname="uk.ac.starlink.ttools.build.OutputCapture"
