--- a/jnihds/build.xml
+++ b/jnihds/build.xml
@@ -81,7 +81,7 @@
   <!-- Define the package name and current versions -->
   <property name="Name" value="JNIHDS"/>
   <property name="name" value="jnihds"/>
-  <property name="version" value="0.3"/>
+  <property name="version" value="0.3-1"/>
 
   <!-- The Java package name -->
   <property name="package.name" value="uk.ac.starlink.hds"/>
