Add osxjarbundler task

--- a/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
+++ b/ant/src/main/org/apache/tools/ant/taskdefs/defaults.properties
@@ -219,3 +219,6 @@ sfx=com.roxes.tools.ant.SFXTask
 jstub=com.roxes.tools.ant.JStubTask
 jnlp=com.roxes.tools.ant.JNLPTask
 preferences=com.roxes.tools.ant.PreferencesTask
+
+# loomcom osxjarbundler task
+osxjarbundler=com.loomcom.ant.tasks.jarbundler.JarBundler
