--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -582,6 +582,14 @@ XXX delete
       <javaproperty key="java.library.path"
                     value="$APP_PACKAGE/Contents/Resources/ppc"/>
 
+      <!-- Include x86 libraries, too, since the first Intel Macs have
+       !   just recently appeared (as of January 2006).  I don't have
+       !   one, however, so I can't test that this works.  -->
+      <resourcefileset dir="${star.dir}/lib"
+                       includes="i386/*.so"/>
+      <javaproperty key="java.library.path"
+                    value="$APP_PACKAGE/Contents/Resources/i386"/>
+
       <!-- demo data lives in ${build.etc}/demo (see target build_demo) -->
       <resourcefileset dir="${build.etc}"
                        includes="demo/**"/>
