--- a/treeview/build.xml
+++ b/treeview/build.xml
@@ -577,18 +577,18 @@ XXX delete
                 version="${version}"
                 jars="${dist.lib.pkg}/treeview-full.jar">
 
+      <!-- Copy in JNI libraries -->
       <resourcefileset dir="${star.dir}/lib"
                        includes="ppc/*.jnilib"/>
-      <javaproperty key="java.library.path"
-                    value="$APP_PACKAGE/Contents/Resources/ppc"/>
-
       <!-- Include x86 libraries, too, since the first Intel Macs have
        !   just recently appeared (as of January 2006).  I don't have
        !   one, however, so I can't test that this works.  -->
       <resourcefileset dir="${star.dir}/lib"
                        includes="i386/*.so"/>
+
+      <!-- Put _both_ of these directories on the library path -->
       <javaproperty key="java.library.path"
-                    value="$APP_PACKAGE/Contents/Resources/i386"/>
+                    value="$APP_PACKAGE/Contents/Resources/ppc:$APP_PACKAGE/Contents/Resources/i386"/>
 
       <!-- demo data lives in ${build.etc}/demo (see target build_demo) -->
       <resourcefileset dir="${build.etc}"
