Add a step to the build_osxapp target, which creates a .dmg file for   distribution. Add tasks to the "clean" target, to clear away these OS X build   products (could this do with better synchronisation with the   build_osxapp target?).

--- a/topcat/build.xml
+++ b/topcat/build.xml
@@ -661,15 +661,21 @@
 
   <!-- Create an MacOS X Java application bundle, using the osxjarbundler ant
    !   task built in to Starlink ant (but derived from the task available
-   !   from http://www.loomcom.com/jarbundler/
+   !   from http://www.loomcom.com/jarbundler/).  Additionally, create
+   !   a .dmg file for distribution.  This last step could be moved into a
+   !   separate target, but since one would rarely be invoked without the
+   !   other, there's little point.
    !
-   !   The osxjarbundler task will work only on OS X (it checks)
+   !   The osxjarbundler task will work only on OS X (it checks), as will
+   !   the hdiutil application.
    !-->
   <target name="build_osxapp"
           depends="build_demo,build-standalone">
-    <mkdir dir="release"/>
-    <delete dir="release/${Name}.app" quiet="true"/>   <!--just in case...-->
-    <osxjarbundler dir="release"
+    <property name="release.dir" value="release-osx"/>
+    <mkdir dir="${release.dir}"/>
+    <delete dir="${release.dir}/${Name}.app"
+            quiet="true"/> <!--just in case...-->
+    <osxjarbundler dir="${release.dir}"
                 mainclass="${package.name}.Driver"
                 name="${Name}"
                 aboutmenuname="${Name}"
@@ -700,6 +706,22 @@
       <javaproperty key="uk.ac.starlink.topcat.cmdname"
                     value="topcat"/>
     </osxjarbundler>
+
+    <!-- Copy the docs into the release directory (anything else?) -->
+    <copy todir="${release.dir}">
+      <fileset dir="${dist.docs}"/>
+    </copy>
+
+    <!-- Create a .dmg file containing the app and docs -->
+    <exec executable="/usr/bin/hdiutil" os="Mac OS X">
+      <arg value="create"/>
+      <arg value="-srcfolder"/>
+      <arg value="${release.dir}"/>
+      <arg value="-volname"/>
+      <arg value="${Name} ${version}"/>
+      <arg value="-ov"/>
+      <arg value="${Name}-${version}.dmg"/>
+    </exec>
   </target>
 
   <!--
@@ -911,6 +933,13 @@
     <delete dir="${dist.lib}"/>
     <delete dir="${dist.docs}"/>
     <delete dir="${dist.etc}"/>
+
+    <!-- The following are magic names, deleting products built only on OS X:
+     !   they probably ought to be synchronised better with
+     !   target build_osxapp.
+     ! -->
+    <delete dir="release-osx" quiet="true"/>
+    <delete file="${Name}-${version}.dmg" quiet="true"/>
 
   </target>
 
