--- a/astrogrid/.properties
+++ b/astrogrid/.properties
@@ -1,3 +1,8 @@
-jar.class.path=xmlrpc-2.0.jar commons-codec-1.3.jar \
-               ../table/table.jar ../connect/connect.jar
+jar.class.path= \
+ commons-codec-1.3.jar \
+ rmi-lite.jar \
+ xmlrpc-2.0.jar \
+ acr-interface-2.0-beta-3.jar \
+ ../connect/connect.jar \
+ ../table/table.jar \
                
