Now use astrogrid class for PLASTIC stuff.  If I move the PLASTIC impl to its own package I could remove the astrogrid dependency.

--- a/ttools/.properties
+++ b/ttools/.properties
@@ -9,4 +9,6 @@ jar.class.path=\
  ../votable/votable.jar \
  ../pal/pal.jar \
  ../axis/axis.jar \
- ../soapserver/soapserver.jar
+ ../soapserver/soapserver.jar \
+ ../astrogrid/astrogrid.jar \
+
